--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,15 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap");
+@font-face {
+  font-family: "JetBrainsMono";
+  src: url("assets/fonts/JetBrainsMono-Regular.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
 
 /* Body Styles */
 body {
   background-color: black;
   color: #ecf0f1;
-  font-family: "Lato", Arial, sans-serif;
+  font-family: "JetBrainsMono", Arial, sans-serif;
   margin: 0;
   display: flex;
   flex-direction: column;
