--- a/styles.css
+++ b/styles.css
@@ -145,6 +145,7 @@ body {
   width: 100%;
   height: 5px;
   -webkit-appearance: none;
+  appearance: none;
   background: rgb(100, 100, 100);
   border-radius: 5px;
   outline: none;
